updated the services section data

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3> And I'm a <span class="multiple-text" href="#services"></span></h3>
-			<p>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
+			<p>Excited about these technological times because <span>this opportunity</span> ideally pairs significantly with your best interests allowining you to <span>amplifiy your social media </span> to <span>position your brand in your audience's mind</span> but also enable you to <span>automate some of your day to day tasks</span> such as customer relation managment</p>
 			<div class="social-media">
+				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
 				<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
 				<!-- <a href="#"><i class="bx bxl-instagram-alt"></i></a> -->
-				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 			</div>
 
 			<div class="buto">
@@ -63,16 +63,149 @@
 			<img src="images/creativeO.jpg" alt="">
 		</div>
 
-<!-- services -->
-			<!-- <section class="services" id="services">
-				<h2><span>Serv</span>ic<span>e</span>s</h2>
-
-				<a href="skills.html" class="btn">Read More</a>
-			</section> -->
-
 	</section>
 
+<!-- services -->
+	<section class="services-skill" id="services">
+		<div class="services-skills">
+			<h1><span>Serv</span>ic<span>e</span>s by Blair</h1>
 
+			<div class="pricing-table">
+					<div class="details">
+						<h2>Increase your clients' reach with a <span>custom designed static website</span> for as low as <span>Ksh8,700</span>
+						. <span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p> -->
+					</div>
+
+					<div class="grid">
+						<div class="box basic">
+							<div class="title">Basic</div>
+							<div class="price">
+								<b>$20.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Generic Domain</div>
+								<div>1 Static Website</div>
+								<div>Single Upgrade</div>
+								<div>Data Tweaking</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box professional">
+							<div class="title">Professional</div>
+							<div class="price">
+								<b>$80.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Custom Domain</div>
+								<div>1 Website</div>
+								<div>Data Tweaking</div>
+								<div>Quarterly Upgrades</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box ninja">
+							<div class="title">Enterprise</div>
+							<div class="price">
+								<b>$670.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Custom Domain</div>
+								<div>1 Website</div>
+								<div>Regular Upgrades</div>
+								<div>Search Engine Optimization</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<a href="#contact" class="hero-btn red-btn">Call Blair now!</a> 
+
+				<div class="pricing-table">
+					<div class="details">
+						<h2>Get and stay connected with <span>Zuku Home Fibre</span> FREE INSTALLATION <span>at Ksh2,800 for 10mbps</span> and <span>Ksh4,400 for 40mbps</span></h2>
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p> -->
+					</div>
+
+					<div class="grid">
+						<div class="box basic">
+							<div class="title">Basic</div>
+							<div class="price">
+								<b>Ksh2,799</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>10 Mbps</div>
+								<div>Internet Surfing</div>
+								<div>CCTV Devices Capability</div>
+								<div>Standard Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box professional">
+							<div class="title">Professional</div>
+							<div class="price">
+								<b>Ksh4,399</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>20 Mbps</div>
+								<div>Moderate Streaming</div>
+								<div>Fast Web Browsing</div>
+								<div>Fast Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box ninja">
+							<div class="title">Office</div>
+							<div class="price">
+								<b>Ksh5,999</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>40 Mbps</div>
+								<div>Multiple Streaming</div>
+								<div>Online Gaming</div>
+								<div>Superfast Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+			<a href="skills.html" class="btn">Offering</a>
+
+		</div>
+	</section>
 
 <!-- about section design -->
 	<section class="about" id="about">
@@ -83,7 +216,7 @@
 		<div class="about-content">
 			<h2 class="heading">About <span>Oyugi Blair</span></h2>
 			<h3> <span class="multiple-text" href="#services"></span></h3>
-			<p>I am  a Kenyan developer and cybersecurity practitioner<br>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>lorem iI am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			<p>I am  a Kenyan <span>developer and cybersecurity practitioner</span><br>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>lorem iI am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.</p>
 
@@ -93,7 +226,7 @@
 
 <!-- skills section design -->
 	<section class="skills" id="skills">
-		<h2 class="heading">Blair's <span>Skill</span> S<span>et</span></h2>
+		<h2 class="heading">Blair's <span>Skill</span>s<span>et</span></h2>
 
 		<div class="skills-container">
 			<div class="skills-box">
@@ -111,21 +244,20 @@
 
 				<a href="skills.html" class="btn">Read More</a>
 			</div>
-		
+
 			<div class="skills-box">
-				<i class="bx bxs-paint"></i>
-				<h3>Digital Marketing</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
+				<i class="bx bx-bar-chart-alt"></i>
+				<h3><span>D</span>evel<span>ope</span>r</h3>
+				<p><span>Digitize</span> relevant <span>operations</span> still <span>save</span> on <span>valuble time</span> with our automated sysytems to manage your schedules and, your valued clients...</p>
 
 				<a href="skills.html" class="btn">Read More</a>
 			</div>
 
+		
 			<div class="skills-box">
-				<i class="bx bx-bar-chart-alt"></i>
-				<h3>Frontend Developer</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
+				<i class="bx bxs-paint"></i>
+				<h3>Digital Marketing</h3>
+				<p>If you are seeing this <span>your clients can experience</span> the same from our creative team's custom design and development for <span>your brand</span>...</p>
 
 				<a href="skills.html" class="btn">Read More</a>
 			</div>
@@ -142,7 +274,7 @@
 			<div class="skills-box">
 				<i class="bx bxs-paint"></i>
 				<h3>Webmaster</h3>
-				<p>Let an <span>elegant</span> wesite not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
+				<p>Let an <span>elegant</span> website not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
 
 				<a href="skills.html" class="btn">Read More</a>
 			</div>
@@ -232,7 +364,7 @@
 				<i class="fa fa-phone"></i>
 				<span>
 					<h5>+254 703846352</h5>
-					<p>Call <span>Blair</span></p>
+					<p>Halla at <span>Blair</span></p>
 				</span>
 			</div>
 			<div class="contact-col">
