--- a/skills.html
+++ b/skills.html
@@ -57,62 +57,62 @@
 	<section class="skills3" id="skills">
 
 		<div class="skills3-container">
-			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in content and software creation. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of commitment to available tasks.</p>
+			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to available tasks</span>.</p>
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Cyber <span>Security</span></h2>
-				<p><span>Firewalls</span> configuration</p>
-				<p>Data protection and <span>privacy</span></p>
-				<p>Service enumeration for <span>vulenarability testing</span></p>
-				<p><span>Endpoint security</span> for your devices</p>
-				<p>Mitigate SQL injection attacks via <span>SSL/TSL certificates</span> and <span>API keys</span> to archieve API security</p>
-				<p><span>Digital evidence</span> aquisition and preservation to maintain its integrity</p>
-				<p>Malware anaysis and reverse engineering via <span>sandboxes</span></p>
+				<p><span>Firewalls</span> configuration.</p>
+				<p>Data protection and <span>privacy</span>.</p>
+				<p>Service enumeration for <span>vulenarability testing</span>.</p>
+				<p><span>Endpoint security</span> for your devices.</p>
+				<p>Mitigate SQL injection attacks via <span>SSL/TSL certificates</span> and <span>API keys</span> to archieve API security.</p>
+				<p><span>Digital evidence</span> aquisition and preservation to maintain its integrity.</p>
+				<p>Malware anaysis and reverse engineering via <span>sandboxes</span>.</p>
 			</div>
 			
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2><span>Data</span> Visualization</h2>
-				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>R</span>, <span>python</span>, <span>MySQL</span></p>
-				<p>Data manipulation and translation</p>
+				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>R</span>, <span>python</span>, <span>MySQL</span>.</p>
+				<p>Data manipulation and translation.</p>
+			</div>
+			
+			<div class="skills3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>D</span>evel<span>ope</span>r</h2>
+				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
+				<p>Software design and implementation.</p>
 			</div>
 		
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Digital <span>Marketing</span></h2>
 				<p><span>Adobe illustrator</span>, <span>Adobe photoshop</span> and <span>Canva</span> command for content development (logo design and picture editing - Graphics designing)</p>
-				<p>Social media manangment</p>
-				<p>Product and Stage photography</p>
-				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span></p>
-			</div>
-			
-			<div class="skills3-box">
-				<i class="bx bx-code-alt"></i>
-				<h2><span>D</span>evel<span>ope</span>r</h2>
-				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span></p>
-				<p>Software design and implementation</p>
+				<p>Social media manangment.</p>
+				<p>Product and Stage photography.</p>
+				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
 			</div>
 
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2><span>Network</span> Engineering</h2>
-				<p>Routing and switching</p>
-				<p>Network <span>subnetting</span> and segmentation</p>
-				<p>Network <span>topologies</span> design</p>
-				<p>OSI/TCP model <span>protocols</span> congifuration</p>
-				<p><span>Remote</span> network connections</p>
-				<p>Linux <span>terminal</span> command</p>
-				<p>Data <span>backups</span></p>
-				<p>Network monitoring and administration</p>
-				<p>Systems <span>maintenance</span></p>
+				<p>Routing and switching.</p>
+				<p>Network <span>subnetting</span> and segmentation.</p>
+				<p>Network <span>topologies</span> design.</p>
+				<p>OSI/TCP model <span>protocols</span> congifuration.</p>
+				<p><span>Remote</span> network connections.</p>
+				<p>Linux <span>terminal</span> command.</p>
+				<p>Data <span>backups</span>.</p>
+				<p>Network monitoring and administration.</p>
+				<p>Systems <span>maintenance</span>.</p>
 			</div>
 			
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2><span>Web</span> Administration</h2>
-				<p>Website monitoring and administration</p>
-				<p><span>Search Engine Optimization</span> command</p>
-				<p><span>Wordpress</span> command</p>
+				<p>Website monitoring and administration.</p>
+				<p><span>Search Engine Optimization</span> command.</p>
+				<p><span>Wordpress</span> command.</p>
 			</div>
 			
 			<div class="skills3-box">
@@ -126,11 +126,142 @@
 
 
 		<!-- services -->
-			<div class="services-skills" id="services">
-				<h2><span>Serv</span>ic<span>e</span>s</h2>
+		<section class="services-skill" id="services">
+			<div class="services-skills">
+				<h1><span>Serv</span>ic<span>e</span>s by Blair</h1>
 
-				<p>Host a static website at Ksh 2800 per year with oblair</p>
+				<div class="pricing-table">
+					<div class="details">
+						<h2>Increase your clients' reach with a <span>custom designed static website</span> for as low as <span>Ksh8,700</span>
+						. <span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p> -->
+					</div>
+
+					<div class="grid">
+						<div class="box basic">
+							<div class="title">Basic</div>
+							<div class="price">
+								<b>$20.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Generic Domain</div>
+								<div>1 Static Website</div>
+								<div>Single Upgrade</div>
+								<div>Data Tweaking</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box professional">
+							<div class="title">Professional</div>
+							<div class="price">
+								<b>$67.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Custom Domain</div>
+								<div>1 Website</div>
+								<div>Data Tweaking</div>
+								<div>Quarterly Upgrades</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box ninja">
+							<div class="title">Enterprise</div>
+							<div class="price">
+								<b>$670.00</b>
+								<span>per year</span>
+							</div>
+
+							<div class="features">
+								<div>1 Custom Domain</div>
+								<div>1 Website</div>
+								<div>Regular Upgrades</div>
+								<div>Search Engine Optimization</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<a href="#contact" class="hero-btn red-btn">Call Blair now!</a> 
+
+				<div class="pricing-table">
+					<div class="details">
+						<h2>Get and stay connected with <span>Zuku Home Fibre</span> FREE INSTALLATION <span>at Ksh2,800 for 10mbps</span> and <span>Ksh4,400 for 40mbps</span></h2>
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p> -->
+					</div>
+
+					<div class="grid">
+						<div class="box basic">
+							<div class="title">Basic</div>
+							<div class="price">
+								<b>Ksh2,799</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>10 Mbps</div>
+								<div>Internet Surfing</div>
+								<div>CCTV Devices Capability</div>
+								<div>Standard Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box professional">
+							<div class="title">Professional</div>
+							<div class="price">
+								<b>Ksh4,399</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>20 Mbps</div>
+								<div>Moderate Streaming</div>
+								<div>Fast Web Browsing</div>
+								<div>Fast Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+
+						<div class="box ninja">
+							<div class="title">Office</div>
+							<div class="price">
+								<b>Ksh5,999</b>
+								<span>per month</span>
+							</div>
+
+							<div class="features">
+								<div>40 Mbps</div>
+								<div>Multiple Streaming</div>
+								<div>Online Gaming</div>
+								<div>Superfast Download</div>
+							</div>
+							<div class="button">
+								<a href="#contact">Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+		</section>
 
 <!-- contact section design -->
 	<section class="contact" id="contact">
@@ -142,7 +273,7 @@
 				<i class="fa fa-phone"></i>
 				<span>
 					<h5>+254 703846352</h5>
-					<p>Call <span>Blair</span></p>
+					<p>Halla at <span>Blair</span></p>
 				</span>
 			</div>
 			<div class="contact-col">
