added whatsapp link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<div>Data Tweaking</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -111,7 +111,7 @@
 								<div>Quarterly Upgrades</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -129,13 +129,13 @@
 								<div>Search Engine Optimization</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<a href="#contact" class="hero-btn red-btn">Call Blair now!</a> 
+				<a href="https://wa.me/254703846352" class="hero-btn red-btn">Call Blair now!</a> 
 
 				<div class="pricing-table">
 					<div class="details">
@@ -159,7 +159,7 @@
 								<div>Standard Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -177,7 +177,7 @@
 								<div>Fast Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -195,7 +195,7 @@
 								<div>Superfast Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 					</div>
@@ -232,7 +232,7 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Cyber Security</h3>
-				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable sysytems</span>...</p>
+				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable systems</span>...</p>
 
 				<a href="skills.html" class="btn">Read More</a>
 			</div>
@@ -247,7 +247,7 @@
 
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
-				<h3><span>D</span>evel<span>ope</span>r</h3>
+				<h3>Developer</h3>
 				<p><span>Digitize</span> relevant <span>operations</span> still <span>save</span> on <span>valuble time</span> with our automated sysytems to manage your schedules and, your valued clients...</p>
 
 				<a href="skills.html" class="btn">Read More</a>
