--- a/skills.html
+++ b/skills.html
@@ -57,7 +57,7 @@
 	<section class="skills3" id="skills">
 
 		<div class="skills3-container">
-			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to available tasks</span>.</p>
+			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Cyber <span>Security</span></h2>
@@ -76,14 +76,7 @@
 				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>R</span>, <span>python</span>, <span>MySQL</span>.</p>
 				<p>Data manipulation and translation.</p>
 			</div>
-			
-			<div class="skills3-box">
-				<i class="bx bx-code-alt"></i>
-				<h2><span>D</span>evel<span>ope</span>r</h2>
-				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
-				<p>Software design and implementation.</p>
-			</div>
-		
+
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Digital <span>Marketing</span></h2>
@@ -91,6 +84,13 @@
 				<p>Social media manangment.</p>
 				<p>Product and Stage photography.</p>
 				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
+			</div>
+
+			<div class="skills3-box">
+				<i class="bx bx-code-alt"></i>
+				<h2><span>D</span>evel<span>ope</span>r</h2>
+				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
+				<p>Software design and implementation.</p>
 			</div>
 
 			<div class="skills3-box">
@@ -153,14 +153,14 @@
 								<div>Data Tweaking</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
 						<div class="box professional">
 							<div class="title">Professional</div>
 							<div class="price">
-								<b>$67.00</b>
+								<b>$80.00</b>
 								<span>per year</span>
 							</div>
 
@@ -171,7 +171,7 @@
 								<div>Quarterly Upgrades</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -189,13 +189,13 @@
 								<div>Search Engine Optimization</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<a href="#contact" class="hero-btn red-btn">Call Blair now!</a> 
+				<a href="https://wa.me/254703846352" class="hero-btn red-btn">Call Blair now!</a> 
 
 				<div class="pricing-table">
 					<div class="details">
@@ -219,7 +219,7 @@
 								<div>Standard Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -237,7 +237,7 @@
 								<div>Fast Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 
@@ -255,7 +255,7 @@
 								<div>Superfast Download</div>
 							</div>
 							<div class="button">
-								<a href="#contact">Learn More</a>
+								<a href="https://wa.me/254703846352">Learn More</a>
 							</div>
 						</div>
 					</div>
