added tha africa law tech photos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="pricing-table">
 					<div class="details">
 						<h2>Increase your clients' reach with a <span>custom designed static website</span> for as low as <span>Ksh8,700</span>
-						. <span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
+						<span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p> -->
 					</div>
@@ -299,7 +299,7 @@
 				<div class="portfolio-layer">
 					<h4>Afrika in Time</h4>
 					<p>Bespoke Cultural and Fashion Accessories For Self and Loved Ones.</p>
-					<a href="#"><i class="bx bx-link-external"></i></a>
+					<a href="https://eminentmmark.github.io/afrika_in_time/"><i class="bx bx-link-external"></i></a>
 				</div>
 			</div>
 
