--- a/skills.html
+++ b/skills.html
@@ -57,7 +57,13 @@
 	<section class="skills3" id="skills">
 
 		<div class="skills3-container">
-			<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
+
+			<div class="skills-content">
+				<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
+
+				<a href="index.html" class="btn">More</a>
+			</div>
+
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Cyber <span>Security</span></h2>
@@ -133,7 +139,7 @@
 				<div class="pricing-table">
 					<div class="details">
 						<h2>Increase your clients' reach with a <span>custom designed static website</span> for as low as <span>Ksh8,700</span>
-						. <span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
+						<span> Host</span> a static website <span>at Ksh2,800 per year</span> with oblair+</h2>
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p> -->
 					</div>
