moved the brands from contacts to the footer

--- a/index.html
+++ b/index.html
@@ -392,32 +392,37 @@
 
 	</section>
 
-<!--  brand design  -->
-	<section id="brands" class="brands">
 
-		<p>Brands oblair Has <span>Partnered</span> With</p>
-
-		<div class="brands-col">
-			<div class="ewan-logo">
-				<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
-				<p>visit <span> Ewan Electric</span></p>
-			</div>
-		
-			<div>
-				<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
-				<p>visit <span> Afrika in Time</span></p>
-			</div>
-		</div>
-	</section>
 
 <!-- footer design -->
 	<footer class="footer">
-		<div class="footer-text">
-			<p>Copyright &copy; 2023 by Oblair | All Rights Reserved</p>
-		</div>
 
-		<div class="footer-iconTop">
-			<a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+		<!--  brand design  -->
+			<main id="brands" class="brands">
+
+				<h4>Brands oblair Has <span>Partnered</span> With</h4>
+
+				<div class="brands-col">
+					<div class="ewan-logo">
+						<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+						<p>visit <span> Ewan Electric</span></p>
+					</div>
+				
+					<div class="ait-logo">
+						<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
+						<p>visit <span> Afrika in Time</span></p>
+					</div>
+				</div>
+			</main>
+
+		<div class="footer-text">
+			<div class="footer-p">
+				<p>Copyright &copy; 2023 by Oblair | All Rights Reserved</p>
+			</div>
+
+			<div class="footer-iconTop">
+				<a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+			</div>
 		</div>
 	</footer>
 
