--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
 		<div class="skills3-container">
 
 			<div class="skills-content">
-				<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers, <span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
+				<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
 
 				<a href="index.html" class="btn">More</a>
 			</div>
@@ -307,35 +307,35 @@
 
 	</section>
 
-<!--  brand design  -->
-	<section id="brands" class="brands">
-
-		<p>Brands oblair Has <span>Partnered</span> With</p>
-
-		<div class="brands-col">
-			<div class="ewan-logo">
-				<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
-				<p>visit <span> Ewan Electric</span></p>
-			</div>
-		
-			<div>
-				<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
-				<p>visit <span> Afrika in Time</span></p>
-			</div>
-		</div>
-	</section>
-
-</div>
-
-
 <!-- footer design -->
 <footer class="footer">
-	<div class="footer-text">
-		<p>Copyright &copy; 2023 by Oblair | All Rights Reserved</p>
-	</div>
 
-	<div class="footer-iconTop">
-		<a href="#skills"><i class="bx bx-up-arrow-alt"></i></a>
+		<!--  brand design  -->
+			<main id="brands" class="brands">
+
+				<h4>Brands oblair Has <span>Partnered</span> With</h4>
+
+				<div class="brands-col">
+					<div class="ewan-logo">
+						<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+						<p>visit <span> Ewan Electric</span></p>
+					</div>
+				
+					<div class="ait-logo">
+						<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
+						<p>visit <span> Afrika in Time</span></p>
+					</div>
+				</div>
+			</main>
+
+	<div class="footer-text">
+		<div class="footer-p">
+			<p>Copyright &copy; 2023 by Oblair | All Rights Reserved</p>
+		</div>
+
+		<div class="footer-iconTop">
+			<a href="#skills"><i class="bx bx-up-arrow-alt"></i></a>
+		</div>
 	</div>
 </footer>
 
