changed the read more button to what i can do 4 u

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				<h3>Cyber Security</h3>
 				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable systems</span>...</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 			
 			<div class="skills-box">
@@ -249,7 +249,7 @@
 				<h3>Data Visualization</h3>
 				<p>For informed <span>decision making</span>, analysed data is crucial not only for your derpartments still ur oganization's robustness...</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 
 			<div class="skills-box">
@@ -257,7 +257,7 @@
 				<h3>Developer</h3>
 				<p><span>Digitize</span> relevant <span>operations</span> still <span>save</span> on <span>valuble time</span> with our automated sysytems to manage your schedules and, your valued clients...</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 
 		
@@ -266,7 +266,7 @@
 				<h3>Digital Marketing</h3>
 				<p>If you are seeing this <span>your clients can experience</span> the same from our creative team's custom design and development for <span>your brand</span>...</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 
 			<div class="skills-box">
@@ -275,7 +275,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 		
 			<div class="skills-box">
@@ -283,7 +283,7 @@
 				<h3>Webmaster</h3>
 				<p>Let an <span>elegant</span> website not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 
 			<div class="skills-box">
@@ -291,7 +291,7 @@
 				<h3>Publications & Forums</h3>
 				<p>Because <span>language</span> is the crux of all persuasion in communication be it writing or otherwise, I will <span>persuade</span> your readers not only to keep returning to your site but also refer you</p>
 
-				<a href="skills.html" class="btn">Read More</a>
+				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 		</div>
 	</section>
@@ -396,6 +396,8 @@
 				<input type="submit" value="Send Message" class="btn">
 			</form> -->
 		</div>
+
+		<!-- <h3>It's difficult for me to do $#!tty work!</h3> -->
 
 	</section>
 
