updated 'network engineering'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="home-content">
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
-			<h3> And I'm a <span class="multiple-text" href="#services"></span></h3>
+			<h3> And I'm a Kenyan <span class="multiple-text" href="#services"></span></h3>
 			<p>Excited about these technological times because <span>this opportunity</span> ideally pairs significantly with your best interests allowining you to <span>amplifiy your social media </span> to <span>position your brand in your audience's mind</span> but also enable you to <span>automate some of your day to day tasks</span> such as customer relation managment</p>
 			<div class="social-media">
 				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
@@ -87,7 +87,7 @@
 
 					<div class="grid">
 						<div class="box basic">
-							<div class="title">Basic</div>
+							<div class="title">Decent</div>
 							<div class="price">
 								<b>$20.00</b>
 								<span>per year</span>
@@ -223,9 +223,13 @@
 		<div class="about-content">
 			<h2 class="heading">About <span>Oyugi Blair</span></h2>
 			<h3> <span class="multiple-text" href="#services"></span></h3>
-			<p>I am  a Kenyan <span>developer and cybersecurity practitioner</span><br>A quick learner with relevant resources and tools for research and analysis, and, in concert esteemed established mentors and managers, every crisis I encounter augments me to grow anti-fragile.<br>lorem iI am  a Kenyan developer and cybersecurity practitioner<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat.</p>
+			<p>I take my work seriously and I understand the success of your organization is very much dependent on the performance of employees like me, who occupy roles that have a significant impact on your results.</p>
+
+			<p>The professional experience I have gained during my working life to date will be a benefit to your team. For example, I understand there's a requirment to collaborate with others to complete difficult, time-sensitive projects to exacting standards. In my previous role I was regularly required to work alongside other departmental team members and company stakeholders to deliver important projects for clients.</p>
+
+			<p>Through out each team task or project, I always ensured I carried out my work to exacting standards whilst supporting other members of the team. In addition to being a strong team player, I have excellent communication and interpersonal skills, I am self-motivated, meet deadlines, and, I will continually look to improve, develop, and , embrace change whilst in the role.</p>
+
+			<p>To summarize, I am a highly professional, caring, trustworthy, friendly, and, motivated individual; and i believe I would make an excellent member of your organization who can quickly input value and help you achieve your commercial and financial goals.</p>
 
 			<!-- <a href="#" class="btn">Read More</a> -->
 		</div>
@@ -272,8 +276,7 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Network Engineering</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt<br>ut labore et dolore magna aliqua.</p>
+				<p>Conventional computer networks designed for <span>optimal performance</span> are not enough, they need to support in-house voice, data, video, and wireless services...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
