--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
 		<div class="skills3-container">
 
 			<div class="skills-content">
-				<p>A quick learner with relevant resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful and worthwill tasks</span>.</p>
+				<p>Am coachable, still, innovative with capable resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful,  worthwill tasks</span>.</p>
 
 				<a href="index.html" class="btn">More</a>
 			</div>
@@ -67,6 +67,7 @@
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2>Cyber <span>Security</span></h2>
+				<p>Monitor, prevent, detect, investigate, and <span>respond to cyber threats</span> around the clock.</p>
 				<p><span>Firewalls</span> configuration.</p>
 				<p>Data protection and <span>privacy</span>.</p>
 				<p>Service enumeration for <span>vulenarability testing</span>.</p>
@@ -95,8 +96,9 @@
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2><span>D</span>evel<span>ope</span>r</h2>
-				<p><span>Django framework</span> web development, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
 				<p>Software design and implementation.</p>
+				<p><span>Git </span>and <span>Version control</span> command.</p>
+				<p><span>Django framework</span> web development, <span>figma</span>, <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
 			</div>
 
 			<div class="skills3-box">
@@ -146,7 +148,7 @@
 
 					<div class="grid">
 						<div class="box basic">
-							<div class="title">Basic</div>
+							<div class="title">Decent</div>
 							<div class="price">
 								<b>$20.00</b>
 								<span>per year</span>
