polished the data

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="buto">
-				<a href="./doc/ICT TECHNOLOGIST RESUME.pdf" class="btn">Blair's Resume</a>
+				<a href="./doc/NEW DEV RESUME.pdf" class="btn">Blair's Resume</a>
 				<a href="https://github.com/eminentmmark" class="btn">Blair's Github</a>
 			</div>
 
@@ -251,7 +251,7 @@
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Data Visualization</h3>
-				<p>For informed <span>decision making</span>, analysed data is crucial not only for your derpartments still ur oganization's robustness...</p>
+				<p>For informed <span>decision making</span>, employ Business Intelligence through <span>data analysis</span> and <span>data science</span>...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
@@ -276,7 +276,7 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Network Engineering</h3>
-				<p>Conventional computer networks designed for <span>optimal performance</span> are not enough, they need to support in-house voice, data, video, and wireless services...</p>
+				<p>Conventional computer networks designed for <span>optimal performance</span> is not enough, they need to support in-house voice, data, video, and wireless services...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
