--- a/skills.html
+++ b/skills.html
@@ -80,7 +80,7 @@
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
 				<h2><span>Data</span> Visualization</h2>
-				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>R</span>, <span>python</span>, <span>MySQL</span>.</p>
+				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>RStudio</span>, <span>Python</span>, <span>MySQL</span>.</p>
 				<p>Data manipulation and translation.</p>
 			</div>
 
